# reclaim-portal-agent

./: .dockerignore  .env.example  .gitignore  15june.csv  16june.csv  19June.csv  19_22June.csv  22June.csv  23-24June.csv  23June.csv  26-June.csv  26June.csv  AFFILIATION_CHECK.md  Bangladesh.csv  Dockerfile  June18.csv  NU_Bangladesh_colleges.csv  README.md  TNC_FLOW.md  Tnc_retrieval.csv  activation_sheet.csv  affiliation_rules.csv  andhra_pradesh_universities.csv  arunachal_pradesh_new_colleges.csv  assam_new_colleges.csv  bihar_new_colleges.csv  chandigarh_new_colleges.csv  chhattisgarh_new_colleges.csv  delhi_ncr_universities.csv  delhi_new_colleges.csv  disqualified.csv  domain_overrides.json  du_colleges_not_in_list.csv  du_traffic.csv  goa_new_colleges.csv  gujarat_new_colleges.csv  haryana_new_colleges.csv  himachal_pradesh_new_colleges.csv  jammu_kashmir_new_colleges.csv  jharkhand_new_colleges.csv  (+21 more)
agent/: __init__.py  anthropic_client.py  config.py  global_agent.py  magic.py  magic_tnc.py  orchestrator.py  pipeline.py  regions.py  sheets_client.py  state.py
benchmark/: portals.jsonl
genie/: README.md  etl_bangladesh.py  etl_indonesia.py  etl_seed.py  etl_states.py  etl_verified.py  migrate_to_postgres.py  reclassify.py
prompts/: tc_analysis.md
scripts/: _activate_from_approved.py  _add_missing_to_final.py  _append_approved_to_final.py  _audit_falsepos.py  _bootstrap.py  _color_match_tnc.py  _daemonize.py  _discover_bangladesh.py  _export_15june_csv.py  _export_17_18june_csv.py  _export_2324_csv.py  _export_activation_csv.py  _export_nologin_csv.py  (+54 more)
(+364 files in other folders)
